fix: hide overflow

--- a/eleff-law/app/public/wp-content/themes/elefflawclone/components/footer-contact-form.css
+++ b/eleff-law/app/public/wp-content/themes/elefflawclone/components/footer-contact-form.css
@@ -5,6 +5,7 @@
   background-size: cover;
   background-position: center;
   color: var(--color-white);
+  overflow: hidden;
 }
 
 .footer-contact-form > .heading {
